--- a/demo-parent/webapp/src/main/resources/templates/index.html
+++ b/demo-parent/webapp/src/main/resources/templates/index.html
@@ -2,9 +2,23 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
-<title>登录</title>
+<meta name="viewport" content="width=device-width,initial-scale=1.0">
+<title>后台管理系统</title>
+<link rel="stylesheet" href="/css/bootstrap/bootstrap.min.css"
+	type="text/css" />
+<link rel="stylesheet" href="/css/bootstrap/bootstrap.addtabs.css"
+	type="text/css" />
 </head>
 <body>
-	<div th:text="${hello}"></div>
+	<div class="panel panel-default">
+		<div class="panel-heading">
+			<h3 class="panel-title">后台管理系统</h3>
+		</div>
+		<div class="panel-body">Panel content</div>
+		<div class="panel-footer">版权@2017小张</div>
+	</div>
+	<script type="text/javascript" src="/js/jquery/jquery.min.js"></script>
+	<script type="text/javascript" src="/js/bootstrap/bootstrap.addtabs.js"></script>
+	<script type="text/javascript" src="/js/index.js"></script>
 </body>
 </html>
