--- a/demo-parent/webapp/src/main/resources/templates/index.html
+++ b/demo-parent/webapp/src/main/resources/templates/index.html
@@ -8,14 +8,23 @@
 	type="text/css" />
 <link rel="stylesheet" href="/css/bootstrap/bootstrap.addtabs.css"
 	type="text/css" />
+<style type="text/css">
+    html,body { height: 100%;margin: 0; padding: 0;}
+</style>
 </head>
+
 <body>
-	<div class="panel panel-default">
-		<div class="panel-heading">
-			<h3 class="panel-title">后台管理系统</h3>
+	<div style="height:100%;width:100%;">
+		<!--左边区域  -->
+		<div style="width:150px;background-color:#364150;height:100%;float:left;color:white">
+		左边
 		</div>
-		<div class="panel-body">Panel content</div>
-		<div class="panel-footer">版权@2017小张</div>
+		<!-- 右边区域 -->
+		<div style="height:100%;float:left;width:calc(100% - 150px);">
+			<div style="background-color:#364150;height:80px;color:white">后台系统管理</div>
+			<div >省份垃圾分类解放路</div>
+			<div style="position:fixed;bottom:0;background-color:#364150;width:100%;height:40px;color:white;">版权2017小张</div>
+		</div>
 	</div>
 	<script type="text/javascript" src="/js/jquery/jquery.min.js"></script>
 	<script type="text/javascript" src="/js/bootstrap/bootstrap.addtabs.js"></script>
