--- a/demo-parent/webapp/src/main/resources/templates/index.html
+++ b/demo-parent/webapp/src/main/resources/templates/index.html
@@ -1,33 +1,130 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width,initial-scale=1.0">
+<meta charset="utf-8" />
 <title>后台管理系统</title>
-<link rel="stylesheet" href="/css/bootstrap/bootstrap.min.css"
-	type="text/css" />
-<link rel="stylesheet" href="/css/bootstrap/bootstrap.addtabs.css"
-	type="text/css" />
-<style type="text/css">
-    html,body { height: 100%;margin: 0; padding: 0;}
-</style>
+<meta name="viewport" content="width=device-width,initial-scale=1.0">
+<!--字体 -->
+<link href="/css/font-awesome/css/font-awesome.min.css"rel="stylesheet" type="text/css" />
+<!--图标-->
+<link href="/css/simple-line-icons/simple-line-icons.min.css" rel="stylesheet" type="text/css" />
+<link href="/css/bootstrap/bootstrap.min.css" rel="stylesheet" type="text/css" />
+<!-- 向下图标折叠功能-->
+<link href="/css/font-awesome/css/components-md.min.css" rel="stylesheet"
+	id="style_components" type="text/css" />
+<link href="/css/layout/css/layout.min.css" rel="stylesheet" type="text/css" />
+<link href="/css/layout/css/themes/darkblue.min.css" rel="stylesheet" type="text/css" id="style_color" />
 </head>
+<body
+	class="page-header-fixed page-sidebar-closed-hide-logo page-content-white page-md">
+	<div class="page-wrapper">
+		<!-- BEGIN HEADER -->
+		<div class="page-header navbar navbar-fixed-top">
+			<div class="page-header-inner ">
+				<div class="page-logo">
+					<a href="index.html"> <img
+						src="/css/img/wologo.png" alt="logo"
+						class="logo-default" />
+					<!-- <span style="color: white; color: #e7ecf1; margin-left: 20px; font-size: larger; vertical-align: text-top;">后台管理</span> -->
+					</a>
+					<div class="menu-toggler sidebar-toggler">
+						<span></span>
+					</div>
+				</div>
+				<a href="javascript:;" class="menu-toggler responsive-toggler"
+					data-toggle="collapse" data-target=".navbar-collapse"> <span></span>
+				</a>
+				<div class="top-menu">
+					<ul class="nav navbar-nav pull-right">
+						<li class="dropdown dropdown-user">
+							<a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-close-others="true">
+                                <span id="userName" class="username username-hide-on-mobile">admin</span>
+                                <i class="img-circle fa fa-user-circle" style="font-size:20px;color:#fff;"></i>
+                                <i class="fa fa-angle-down"></i>
+                              </a>
+							<ul class="dropdown-menu dropdown-menu-default">
+								<li><a href="index.html"> <i
+										class="icon-user"></i> 后台管理
+								</a></li>
+								<li><a href="#"> <i
+										class="icon-calendar"></i> 个人信息
+								</a></li>
+								<li><a href="page_user_login_1.html"> <i
+										class="icon-key"></i> 退出系统
+								</a></li>
+							</ul></li>
+					</ul>
+				</div>
+			</div>
+		</div>
+		<div class="page-container">
+			<div class="page-sidebar-wrapper">
+				<div class="page-sidebar navbar-collapse collapse">
+					<ul class="page-sidebar-menu  page-header-fixed "
+						data-keep-expanded="false" data-auto-scroll="true"
+						data-slide-speed="200" style="padding-top: 20px">
+						<li class="nav-item start active open"><a href="javascript:;"
+							class="nav-link nav-toggle"> <i class="icon-home"></i> <span
+								class="title">系统管理</span> <span class="selected"></span> <span
+								class="arrow open"></span>
+						</a>
+							<ul class="sub-menu">
+								<li class="nav-item start active open"><a href="index.html"
+									class="nav-link "> <i class="icon-bar-chart"></i> <span
+										class="title">用户管理</span> <span class="selected"></span>
+								</a></li>
+								<li class="nav-item start "><a href="#"
+									class="nav-link "> <i class="icon-bulb"></i> <span
+										class="title">权限管理</span> <span class="badge badge-success"></span>
+								</a></li>
+								<li class="nav-item start "><a href="#"
+									class="nav-link "> <i class="icon-graph"></i> <span
+										class="title">部门管理</span> <span class="badge badge-danger"></span>
+								</a></li>
+							</ul></li>
+					</ul>
+					</li>
 
-<body>
-	<div style="height:100%;width:100%;">
-		<!--左边区域  -->
-		<div style="width:150px;background-color:#364150;height:100%;float:left;color:white">
-		左边
+					</ul>
+					</li>
+					</ul>
+				</div>
+			</div>
+			<div class="page-content-wrapper">
+				<div class="page-content">
+					<div class="page-bar">
+						<ul class="page-breadcrumb">
+							<li><a href="index.html">Home</a>
+							</li>
+							
+						</ul>
+					</div>
+				</div>
+				
+			</div>
+		<div class="page-footer">
+			<div class="page-footer-inner">
+				2017 &copy; 版权所有小张
+			</div>
 		</div>
-		<!-- 右边区域 -->
-		<div style="height:100%;float:left;width:calc(100% - 150px);">
-			<div style="background-color:#364150;height:80px;color:white">后台系统管理</div>
-			<div >省份垃圾分类解放路</div>
-			<div style="position:fixed;bottom:0;background-color:#364150;width:100%;height:40px;color:white;">版权2017小张</div>
-		</div>
+		<!-- END FOOTER -->
 	</div>
-	<script type="text/javascript" src="/js/jquery/jquery.min.js"></script>
-	<script type="text/javascript" src="/js/bootstrap/bootstrap.addtabs.js"></script>
-	<script type="text/javascript" src="/js/index.js"></script>
+
+	<script src="/js/jquery/jquery.min.js"
+		type="text/javascript"></script>
+	<script src="/js/bootstrap/bootstrap.min.js"
+		type="text/javascript"></script>
+	<script src="/js/jquery/jquery.slimscroll.min.js"
+		type="text/javascript"></script>
+	<script src="/js/layout/morris.min.js"
+		type="text/javascript"></script>
+	<!--整体布局-->
+	<script src="/js/layout/app.min.js"
+		type="text/javascript"></script>
+	<script src="/js/layout/layout.min.js"
+		type="text/javascript"></script>
+	<script src="/js/layout/js.cookie.min.js"
+		type="text/javascript"></script>
 </body>
+
 </html>
