--- a/demo-parent/webapp/src/main/resources/templates/index2.html
+++ b/demo-parent/webapp/src/main/resources/templates/index2.html
@@ -68,16 +68,16 @@
 								class="title">系统管理</span> <span class="selected"></span> <span
 								class="arrow open"></span>
 						</a>
-							<ul class="sub-menu ">
-								<li class="nav-item start active open"><a data-addtab="baidu" data-url="http://baidu.com"
+							<ul class="sub-menu">
+								<li class="nav-item start active open"><a href="index.html"
 									class="nav-link "> <i class="icon-bar-chart"></i> <span
-										class="title">用户管理</span>
+										class="title">用户管理</span> <span class="selected"></span>
 								</a></li>
-								<li class="nav-item start "><a data-addtab="mail1" data-url="#"
+								<li class="nav-item start "><a href="#"
 									class="nav-link "> <i class="icon-bulb"></i> <span
 										class="title">权限管理</span> <span class="badge badge-success"></span>
 								</a></li>
-								<li class="nav-item start "><a data-addtab="sina" data-url="http://sina.com.cn"
+								<li class="nav-item start "><a href="#"
 									class="nav-link "> <i class="icon-graph"></i> <span
 										class="title">部门管理</span> <span class="badge badge-danger"></span>
 								</a></li>
@@ -92,30 +92,24 @@
 			</div>
 			<div class="page-content-wrapper">
 				<div class="page-content">
-					<div>
-						<!-- <ul class="page-breadcrumb">
+					<div class="page-bar">
+						<ul class="page-breadcrumb">
 							<li><a href="index.html">Home</a>
 							</li>
 							
-						</ul> -->
-						<ul class="nav nav-tabs" role="tablist">
-							<li role="presentation" class="active"><a href="#home"
-								aria-controls="home" role="tab" data-toggle="tab">Home</a></li>
 						</ul>
-						<div class="tab-content">
-							<div role="tabpanel" class="tab-pane active" id="home">I'm
-								a homepage.</div>
-						</div>
 					</div>
 				</div>
+				
 			</div>
-			<div class="page-footer">
-				<div class="page-footer-inner">
-					2017 &copy; 版权所有小张
-				</div>
+		<div class="page-footer">
+			<div class="page-footer-inner">
+				2017 &copy; 版权所有小张
 			</div>
 		</div>
+		<!-- END FOOTER -->
 	</div>
+
 	<script src="/js/jquery/jquery.min.js"
 		type="text/javascript"></script>
 	<script src="/js/bootstrap/bootstrap.min.js"
