--- a/demo-parent/webapp/src/main/resources/templates/index.html
+++ b/demo-parent/webapp/src/main/resources/templates/index.html
@@ -3,12 +3,12 @@
 <head>
 <meta charset="utf-8" />
 <title>后台管理系统</title>
+<div th:include="/head"></div>
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
-<!--字体 -->
-<link href="/css/font-awesome/css/font-awesome.min.css"rel="stylesheet" type="text/css" />
+
 <!--图标-->
 <link href="/css/simple-line-icons/simple-line-icons.min.css" rel="stylesheet" type="text/css" />
-<link href="/css/bootstrap/bootstrap.min.css" rel="stylesheet" type="text/css" />
+
 <link href="/css/bootstrap/bootstrap.addtabs.css" rel="stylesheet" type="text/css" />
 <!-- 向下图标折叠功能-->
 <link href="/css/font-awesome/css/components-md.min.css" rel="stylesheet"
@@ -69,7 +69,7 @@
 								class="arrow open"></span>
 						</a>
 							<ul class="sub-menu ">
-								<li class="nav-item start active open"><a data-addtab="baidu" data-url="http://baidu.com"
+								<li class="nav-item start active open"><a data-addtab="baidu" data-url="/userIndex"
 									class="nav-link "> <i class="icon-bar-chart"></i> <span
 										class="title">用户管理</span>
 								</a></li>
@@ -103,8 +103,7 @@
 								aria-controls="home" role="tab" data-toggle="tab">Home</a></li>
 						</ul>
 						<div class="tab-content">
-							<div role="tabpanel" class="tab-pane active" id="home">I'm
-								a homepage.</div>
+							<div role="tabpanel" class="tab-pane active" id="home" th:text="${hello}"></div>
 						</div>
 					</div>
 				</div>
@@ -116,10 +115,7 @@
 			</div>
 		</div>
 	</div>
-	<script src="/js/jquery/jquery.min.js"
-		type="text/javascript"></script>
-	<script src="/js/bootstrap/bootstrap.min.js"
-		type="text/javascript"></script>
+	
 	<script src="/js/bootstrap/bootstrap.addtabs.js"
 		type="text/javascript"></script>
 	<script src="/js/jquery/jquery.slimscroll.min.js"
