--- a/demo-parent/webapp/src/main/resources/templates/index.html
+++ b/demo-parent/webapp/src/main/resources/templates/index.html
@@ -110,7 +110,7 @@
 			</div>
 			<div class="page-footer">
 				<div class="page-footer-inner">
-					2017 &copy; 版权所有归小张
+					2017 &copy; 版权所有为小张
 				</div>
 			</div>
 		</div>
