--- a/demo-parent/webapp/src/main/resources/templates/common/userIndex.html
+++ b/demo-parent/webapp/src/main/resources/templates/common/userIndex.html
@@ -7,9 +7,76 @@
 <link href="/css/bootstrap/bootstrap-table/bootstrap-table.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-	<div class="table" id="userTable"></div>
+	<div class="panel-body">
+		<!-- 列表 -->
+		<div class="table" id="userTable"></div>
+		<!-- 工具条toolbar -->
+		<div id="toolbar">
+			<button type="button" class="btn btn-primary"  data-toggle="modal" onclick="userIndex.addUser()">新增</button>
+		</div>
+		<!-- 新增弹窗 -->
+		<div class="modal fade" id="saveModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+			<div class="modal-dialog" role="document" >
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal"
+							aria-label="Close">
+							<span aria-hidden="true">&times;</span>
+						</button>
+						<h4 class="modal-title">新增用户</h4>
+					</div>
+					<div class="modal-body" style="height:300px; overflow:scroll;">
+						<form id="userForm">
+							<div class="form-group">
+								<label >用户账号</label> <input
+									type="text" class="form-control" id="userCode"
+									name="userCode">
+							</div>
+							<div class="form-group">
+								<label >用户名</label> <input
+									type="text" class="form-control" id="userName"
+									name="userName">
+							</div>
+							<div class="form-group">
+								<label >密码</label> <input
+									type="password" class="form-control" id="password"
+									name="password">
+							</div>
+							<div class="form-group">
+								<label >地址</label> <input
+									type="text" class="form-control" id="address"
+									name="address">
+							</div>
+							<div class="form-group">
+								<label >电话</label> <input
+									type="text" class="form-control" id="phone"
+									name="phone">
+							</div>
+							<div class="form-group">
+								<label >邮件</label> <input
+									type="email" class="form-control" id="email"
+									name="email">
+							</div>
+							<div class="form-group">
+								<label >部门</label> <input
+									type="text" class="form-control" id="departmentId"
+									name="departmentId">
+							</div>
+						</form>
+					</div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
+						<button type="submit" class="btn btn-primary" onclick="userIndex.submit()">保存</button>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 <script type="text/javascript" src="/js/bootstrap/bootstrap-table/bootstrap-table.js"></script>
 <script type="text/javascript" src="/js/bootstrap/bootstrap-table/bootstrap-table-zh-CN.js"></script>
+<script type="text/javascript" src="/js/bootstrap/bootstrapvalidator/bootstrapValidator.js"></script>
+<script type="text/javascript" src="/js/bootstrap/bootstrapvalidator/language/zh_CN.js"></script>
+<script type="text/javascript" src="/js/jquery/jquery-ui.min.js"></script>
 <script type="text/javascript" src="/js/common/userIndex.js"></script>
 </body>
 </html>
