--- a/demo-parent/webapp/src/main/resources/templates/head.html
+++ b/demo-parent/webapp/src/main/resources/templates/head.html
@@ -7,4 +7,5 @@
 	
 	<script src="/js/jquery/jquery.min.js" type="text/javascript"></script>
 	<script src="/js/bootstrap/bootstrap.min.js" type="text/javascript"></script>
+	<script type="text/javascript" src="/js/common.js"></script>
 <!-- </head> -->
