--- a/demo-parent/webapp/src/main/resources/templates/index.html
+++ b/demo-parent/webapp/src/main/resources/templates/index.html
@@ -110,7 +110,7 @@
 			</div>
 			<div class="page-footer">
 				<div class="page-footer-inner">
-					2017-2028 &copy; 版权所有为小张3
+					2017-2018 &copy; 版权所有为小张4
 				</div>
 			</div>
 		</div>
@@ -129,6 +129,7 @@
 		type="text/javascript"></script>
 	<script src="/js/layout/js.cookie.min.js"
 		type="text/javascript"></script>
+	<script type="text/javascript" src="/js/index.js"></script>
 </body>
 
 </html>
